Improve SquireUI on mobile by placing toolbar fixed at bottom of screen (and top of touch keyboard)

--- a/dev/Styles/Compose.less
+++ b/dev/Styles/Compose.less
@@ -5,7 +5,7 @@
 		width: 98%;
 		max-width: 1000px;
 		margin: 10px auto;
-		min-height: calc(100% - 30px);
+		min-height: calc(100% - 44px);
 
 		.modal-body {
 			padding: 0;
@@ -87,7 +87,7 @@
 		color: #333;
 
 		html.rl-mobile &{
-			overflow: scroll;
+			overflow: auto;
 		}
 
 		.e-identity {
