--- a/dev/Styles/Identity.less
+++ b/dev/Styles/Identity.less
@@ -2,7 +2,7 @@
 	.b-identity-content {
 
 		&.modal {
-			width: 750px;
+			width: 800px;
 		}
 
 		.modal-header {
