--- a/dev/Styles/_CkeFix.less
+++ b/dev/Styles/_CkeFix.less
@@ -16,7 +16,7 @@
 }
 
 .cke_top {
-	padding: 6px 4px 1px 6px !important;
+	padding: 6px 4px 1px 6px;
 	box-shadow: none !important;
 	border-bottom: 1px solid #b6b6b6 !important;
 	background: #F0F0F0 !important;
